# mimicus

./: .gitignore  .mcp.json  CLAUDE.md  P1.md  QUICKSTART.md  QWEN.md  README.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  main.py  mcp_client.py  mimicus.db  pyproject.toml  requirements.txt  searxng_mcp_demo.py
.github/workflows/: jekyll-gh-pages.yml
.zed/: settings.json  tasks.json
assets/favicon/: site.webmanifest
docs/: HLD.md  LLD.md  Mimicus_UI.md  VARIABLE_NAMES.md  deploy-docs.yml  mkdocs.yml
docs/user_manual/: index.md  mkdocs.yml
docs/user_manual/concepts/: how-it-works.md  mock-vs-real-api.md  what-is-mimicus.md  why-use-mocks.md
docs/user_manual/core-features/: bulk-import.md  creating-mocks.md  matching-requests.md  proxy-modes.md  response-templates.md
docs/user_manual/frontend-integration/: react-setup.md
docs/user_manual/getting-started/: first-mock.md  index.md  installation.md  troubleshooting.md
docs/user_manual/image-mocking/: dynamic-generation.md  overview.md  responsive-images.md  (+1 more)
src/: main.py
src/adminui/: FINAL_DOCS.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
src/application/: auth_exceptions.py  exceptions.py
src/core/: app.py  config.py  dependencies.py  dependencies_auth.py  dependencies_image.py  dependencies_import.py
storage/openapi/: api.json  my_api.json  openapi.json  openapi.yaml  spec.json  users.json
tests/: test_stage1_integration.py  test_stage2_templates.py  test_stage3_admin_api.py  test_stage4_proxy.py
tests/integration/: test_auth_endpoints.py  test_inspector_api.py  test_openapi_import.py
(+103 files in other folders)
